--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -11,7 +11,7 @@
  "font_size": 16,
  "hide_orphans": false,
  "ignore_pause": true,
- "include_subdirs": false,
+ "include_subdirs": true,
  "inner_class": null,
  "junit_xml_file": "",
  "junit_xml_timestamp": false,
@@ -20,7 +20,7 @@
  "post_run_script": "",
  "pre_run_script": "",
  "prefix": "test_",
- "selected": null,
+ "selected": "test_buy_tool.gd",
  "should_exit": true,
  "should_exit_on_success": false,
  "should_maximize": false,
