[QZ-71] Completed feature 'Player Action Commands' with tests
* [QZ-72] Completed task 'Create abstract command' with tests

* [QZ-73] Completed task 'Create a command factory' with tests

* [QZ-74] Completed task 'Create build command' with tests

* [QZ-75] Completed task 'Create buy land command' with tests

* [QZ-76] Completed task 'Factory command depends on network' with tests

* Fixed issue with building type

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@ export_presets.cfg
 # Project specific ignores
 builds/
 android/
+default_env.tres
 
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Plugin-specific ignores
+.gut_editor_shortcuts.cfg
